# lightweight_supervisor

./: .clang-format  CMakeLists.txt  README.md  supervisor_config.json
docs/: code_walkthrough.md  cpp_system_programming_notes.md  ipc_and_child_process_walkthrough.md  ipc_response_spec.md  learning_roadmap.md  supervisor_cpp_walkthrough.md
examples/: dummy_process.cpp  planner_process.cpp  thread_manager.cpp  thread_manager.hpp
include/: child_status_json.hpp  config_loader.hpp  control_server.hpp  ipc_client.hpp  supervisor.hpp  supervisor_types.hpp
src/: child_status_json.cpp  config_loader.cpp  control_server.cpp  ipc_client.cpp  main.cpp  supervisor.cpp
tools/: CMakeLists.txt  README.md  lmctl.cpp
tools/docs/: architecture.md
tools/examples/: dummy_process.cpp
tools/include/: config_loader.hpp  control_server.hpp  supervisor.hpp
tools/src/: control_server.cpp  ipc_client.cpp  supervisor.cpp
